--- a/FontUtil/font-util/build.gradle
+++ b/FontUtil/font-util/build.gradle
@@ -1,5 +1,29 @@
 apply plugin: 'com.android.library'
 
+ext {
+    bintrayRepo = 'FontUtil'
+    bintrayName = 'font-util'
+
+    publishedGroupId = 'com.khouli.font'
+    libraryName = 'FontUtil'
+    artifact = 'font-util'
+
+    libraryDescription = 'Change typeface directly from xml'
+
+    siteUrl = 'https://github.com/Mohanad-k/FontUtil'
+    gitUrl = 'https://github.com/nuuneoi/FBLikeAndroid.git'
+
+    libraryVersion = '0.0.1'
+
+    developerId = 'mohanad88'
+    developerName = 'Mohanad Alkhouli'
+    developerEmail = 'mohanad.khouli@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -29,3 +53,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
 }
+
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
